--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.2.2
 django-cors-headers==3.7.0
 django-environ==0.4.5
 djangorestframework==3.12.4
+Pillow==8.2.0
 pycodestyle==2.7.0
 pytz==2021.1
 sqlparse==0.4.1
