--- a/requirements.txt
+++ b/requirements.txt
@@ -1,146 +1,33 @@
 aniso8601==7.0.0
-apturl==0.5.2
 asgiref==3.3.4
-astroid==2.4.2
-attrs==19.3.0
-backcall==0.2.0
-bcrypt==3.1.7
-beautifulsoup4==4.9.1
-blinker==1.4
-Brlapi==0.7.0
-cached-property==1.5.1
-cachetools==4.1.1
-certifi==2020.4.5.1
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.3
-command-not-found==0.3
-cryptography==3.0
-cupshelpers==1.0
-dbus-python==1.2.16
-decorator==4.4.2
-defer==1.0.6
-distro==1.5.0
-distro-info===0.23ubuntu1
-Django==3.2.3
-docker==4.1.0
-docker-compose==1.25.0
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.16
-duplicity==0.8.12.0
-fasteners==0.14.1
-Flask==1.1.2
-future==0.18.2
-google-api-python-client==1.7.11
-google-auth==1.5.1
-google-auth-httplib2==0.0.4
+autopep8==1.5.7
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.7
+Django==3.2.2
+django-appconf==1.0.4
+django-cors-headers==3.7.0
+django-cryptography==1.0
+django-encrypted-filefield==0.3.0
+django-environ==0.4.5
+djangorestframework==3.12.4
 graphene==2.1.8
 graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
-gyp==0.1
-html5lib==1.1
-httplib2==0.18.1
 idna==2.10
-importlib-metadata==1.6.0
-iniconfig==1.1.1
-ipython==7.21.0
-ipython-genutils==0.2.0
-isort==5.7.0
-itsdangerous==1.1.0
-jedi==0.18.0
-jeepney==0.4.3
-Jinja2==2.11.2
-jsonschema==3.2.0
-keyring==21.3.0
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.5
-lazy-object-proxy==1.4.3
-lockfile==0.12.2
-louis==3.14.0
-lxml==4.5.2
-macaroonbakery==1.3.1
-Mako==1.1.2
-Markups==3.1.0
-MarkupSafe==1.1.1
-mccabe==0.6.1
-monotonic==1.5
-more-itertools==4.2.0
-netifaces==0.10.4
-numpy==1.18.4
-oauth2client==4.1.2
-oauthlib==3.1.0
-olefile==0.46
-packaging==20.8
-paramiko==2.7.1
-parso==0.8.1
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==7.2.0
-pluggy==0.13.1
+Pillow==8.2.0
 promise==2.3
-prompt-toolkit==3.0.16
-protobuf==3.12.3
-py==1.10.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pycairo==1.16.2
-pycups==2.0.1
-PyDrive==1.3.1
-Pygments==2.7.4
-PyGObject==3.38.0
-PyJWT==1.7.1
-pylint==2.6.0
-pymacaroons==0.13.0
-PyNaCl==1.4.0
-pyOpenSSL==19.1.0
-pyparsing==2.4.7
-PyQt5==5.15.2
-PyQt5-sip==12.8.1
-pyRFC3339==1.1
-pyrsistent==0.15.5
-pytest==6.2.2
-python-apt==2.1.3+ubuntu1.3
-python-dateutil==2.8.1
-python-debian==0.1.37
-python-markdown-math==0.8
-pytz==2020.1
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.47
-requests==2.23.0
-requests-unixsocket==0.2.0
-rsa==4.0
+pycodestyle==2.7.0
+pycparser==2.20
+python-magic==0.4.22
+pytz==2021.1
+requests==2.25.1
 Rx==1.6.1
-scour==0.37
-SecretStorage==3.1.2
-simplejson==3.17.0
 singledispatch==3.6.1
-six==1.15.0
-soupsieve==2.0.1
-SQLAlchemy==1.3.19
+six==1.16.0
 sqlparse==0.4.1
-ssh-import-id==5.10
-systemd-python==234
 text-unidecode==1.3
-texttable==1.6.2
 toml==0.10.2
-traitlets==5.0.5
-ubuntu-advantage-tools==27.0
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-uritemplate==0.6
-urllib3==1.25.9
-usb-creator==0.3.7
-wadllib==1.3.4
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.53.0
-Werkzeug==1.0.1
-wrapt==1.12.1
-xkit==0.0.0
-zipp==1.0.0
+urllib3==1.26.5
