--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aniso8601==7.0.0
 asgiref==3.3.4
 autopep8==1.5.7
+cachetools==4.2.2
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
@@ -11,23 +12,37 @@ django-cors-headers==3.7.0
 django-cryptography==1.0
 django-encrypted-filefield==0.3.0
 django-environ==0.4.5
+django-jazzmin==2.4.7
 djangorestframework==3.12.4
+google-api-core==1.28.0
+google-api-python-client==2.7.0
+google-auth==1.30.1
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.53.0
 graphene==2.1.8
 graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
+httplib2==0.19.1
 idna==2.10
+packaging==20.9
 Pillow==8.2.0
 promise==2.3
+protobuf==3.17.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.7.0
 pycparser==2.20
+pyparsing==2.4.7
 python-magic==0.4.22
 pytz==2021.1
 requests==2.25.1
+rsa==4.7.2
 Rx==1.6.1
 singledispatch==3.6.1
 six==1.16.0
 sqlparse==0.4.1
 text-unidecode==1.3
 toml==0.10.2
+uritemplate==3.0.1
 urllib3==1.26.5
