--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
         proxy_redirect off;
     }
     location /static/ {
-        alias /home/jsyme/lemonster-api/static/;
+        alias /lemonster-api/static/;
     }
 
 }
