--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,32 +1,34 @@
-version: '3.7'
-
+version: "3.7"
+   
 services:
-  nginx:
-    build: ./nginx
-    ports:
-      - 8181:80
+  db:
+    container_name: "postgres"
+    image: postgres:13
     volumes:
-      - static_volume:/home/jsyme/lemonster-api/static
-    depends_on:
-      - web
-    restart: "on-failure"
+      - ./data/db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U postgres"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+    ports: 
+      - "5432:5432"
   web:
-    build: . #build the image for the web service from the dockerfile in parent directory
-    command: sh -c "python manage.py makemigrations &&
-                    python manage.py migrate &&
-                    python manage.py collectstatic --no-input &&
-                    gunicorn api.wsgi:application --bind 0.0.0.0:8181"
+    container_name: "api"
+    build: 
+      context: .
+      dockerfile: dev.Dockerfile
+    command: python manage.py runserver 0.0.0.0:8000 
     volumes:
-      - .:/home/jsyme/lemonster-api:rw # map data and files from parent directory in host to microservice directory in docker containe
-      - static_volume:/home/jsyme/lemonster-api/static
-  
-    image: lemonster-api
-
-    expose:
-      - 8181
-    restart: "on-failure"
-
-
-
-volumes:
-  static_volume:
+      - .:/code
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+  # react:
+  #   container_name: "react"
+  #   build: react.Dockerfile
