Postgres added to docker-compose, ClientGenereatedContent added to projects

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 static/
 media/
 data/
+.vscode
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -106,6 +107,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+prod.env
 .env
 .venv
 env/
